--- a/main.html
+++ b/main.html
@@ -92,6 +92,31 @@
       </div>
     </form>
 
+<h2>Danh sách giao dịch</h2>
+<table id="transactionTable">
+  <thead>
+    <tr>
+      <th>Loại</th>
+      <th>Khách hàng</th>
+      <th>Email</th>
+      <th>Liên hệ</th>
+      <th>Phần mềm</th>
+      <th>Gói</th>
+      <th>Số tháng</th>
+      <th>Ngày bắt đầu</th>
+      <th>Ngày kết thúc</th>
+      <th>Doanh thu</th>
+      <th>Số thiết bị</th>
+      <th>Ghi chú</th>
+      <th>Hành động</th>
+    </tr>
+  </thead>
+  <tbody>
+    <!-- Dữ liệu sẽ được render ở đây -->
+  </tbody>
+</table>
+
+
     <p id="successMessage"></p>
     <p id="errorMessage"></p>
   </div>
