--- a/main.html
+++ b/main.html
@@ -64,12 +64,18 @@
       <!-- Dòng 3 -->
       <div>
         <label>Tên phần mềm:</label>
-        <input type="text" id="softwareName" required>
+        <select id="softwareName" required>
+          <option value="">-- Chọn phần mềm --</option>
+          <!-- Danh sách phần mềm sẽ được điền động bằng JavaScript -->
+        </select>
       </div>
 
       <div>
         <label>Gói phần mềm:</label>
-        <input type="text" id="softwarePackage" required>
+        <select id="softwarePackage" required>
+          <option value="">-- Chọn gói --</option>
+          <!-- Danh sách gói sẽ được điền động bằng JavaScript -->
+        </select>
       </div>
 
       <div>
