--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <title>Trang chính</title>
   <link rel="stylesheet" href="css/style.css" />
   <script defer src="js/constants.js"></script>
-  <script defer src="js/main.js"></script>
+  <script defer src\\[0] src="js/main.js"></script>
 </head>
 <body>
   <div class="container">
@@ -23,6 +23,11 @@
           <option value="Nâng gói">Nâng gói</option>
           <option value="Hoàn hàng">Hoàn hàng</option>
         </select>
+      </div>
+
+      <div>
+        <label>Ngày giao dịch:</label>
+        <input type="date" id="transactionDate">
       </div>
 
       <div>
