--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
       <!-- Dòng 1 -->
       <div>
         <label>Ngày giao dịch:</label>
-        <input type="date" id="transactionDate">
+        <input type="text" id="transactionDate" placeholder="dd/mm/yyyy">
       </div>
 
       <div>
@@ -48,12 +48,12 @@
       <!-- Dòng 2 -->
       <div>
         <label>Ngày bắt đầu:</label>
-        <input type="date" id="startDate">
+        <input type="text" id="startDate" placeholder="dd/mm/yyyy">
       </div>
 
       <div>
         <label>Ngày kết thúc:</label>
-        <input type="date" id="endDate" readonly>
+        <input type="text" id="endDate" placeholder="dd/mm/yyyy"> <!-- Bỏ readonly -->
       </div>
 
       <div>
