--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
 
       <div>
         <label>Ngày kết thúc:</label>
-        <input type="text" id="endDate" placeholder="yyyy/mm/dd"> <!-- Bỏ readonly -->
+        <input type="text" id="endDate" placeholder="yyyy/mm/dd">
       </div>
 
       <div>
