--- a/main.html
+++ b/main.html
@@ -134,12 +134,16 @@
       </div>
     </form>
 
-    <h2>Danh sách giao dịch</h2>
-    <div class="pagination">
-      <button onclick="prevPage()">Trang trước</button>
-      <span id="pageInfo"></span>
-      <button onclick="nextPage()">Trang sau</button>
+    <!-- Bọc h2 và pagination trong một div để xếp ngang -->
+    <div class="table-header">
+      <h2>Danh sách giao dịch</h2>
+      <div class="pagination">
+        <button onclick="prevPage()">Trang trước</button>
+        <span id="pageInfo"></span>
+        <button onclick="nextPage()">Trang sau</button>
+      </div>
     </div>
+
     <table id="transactionTable">
       <thead>
         <tr>
