--- a/main.html
+++ b/main.html
@@ -121,6 +121,14 @@
       </div>
 
       <div>
+        <label>Tên tài khoản:</label>
+        <select id="accountName">
+          <option value="">-- Chọn tài khoản --</option>
+          <!-- Danh sách tài khoản sẽ được điền động bằng JavaScript -->
+        </select>
+      </div>
+
+      <div>
         <label>Doanh thu:</label>
         <input type="number" id="revenue">
       </div>
